--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+/*styles*/
+
+.topnav a:hover {
+    background-color: #A60A33;
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+  }
+.topnav .icon {
+    display: none;
+}
+
 /* header */
 header {
     font-family: 'Inter', sans-serif;
@@ -5,24 +17,28 @@ header {
 }
 .topnav {
     background-color: white;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    overflow: hidden;
 }
 .toolbar-logo {
-    float: left;
     margin-left: 80px;
     margin-right: 160px;
     margin-top: 10px;
     width: 60px;
 }
 .topnav a {
-    float:left;
     color: #262626;
     text-align: center;
-    margin-top: 25px;
-    margin-right: 75px;
+    margin-right: 45px;
+    margin-top: 14px;
     text-decoration: none;
     font-size: 16px;
     display: block;
     font-weight: 400;
+    padding: 15px 15px;
+
 }
 .nav-button{
     float:left;
@@ -104,6 +120,31 @@ p2 {
     margin-top: 25px;
 }
 
-
-
 /*responsive*/
+
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      
+      display: block;
+    }
+  }
+
+@media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+      position: absolute;
+      margin-right: 20px;
+      margin-left: 20px;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
+@media screen and (max-width: 600px) {
+    .toolbar-logo {
+        display: none;
+    }
+}
