--- a/css/style.css
+++ b/css/style.css
@@ -81,10 +81,19 @@ h2 {
     margin: 0 0 15px 0;
     text-align: center;
 }
+.subtitulo{
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    color: #262626;
+    margin: 0 0 15px 0;
+    
+}
+
 .p1 {
     font-family: 'Inter', sans-serif;
-    font-size: 20px;
-    font-weight: 300;
+    font-size: 10px;
+    font-weight: 100;
     color: black;
     margin: 0 0 15px 0;
 }
@@ -250,6 +259,59 @@ h2 {
     margin-top: 120px;
 
 }	
+
+
+.container-funciones{
+    
+    display: block;
+    height: 680px;
+    width: 100%;
+    background-color: #F8F9FA;
+    align-items: center;
+    justify-content: center;
+}
+.container-funciones h2{
+    padding-top: 60px;
+}
+
+.cards-container{
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.card {
+   
+    width: 300px;
+    
+    padding: 10px;
+    margin: auto;
+    margin-top: 40px;
+    overflow: hidden; /* Esto ocultará el texto que se expande */
+    transition: height 0.3s ease; /* Esto añadirá una animación a la expansión */
+    display: flex;
+    flex-direction: column;
+    background-color: #FDFCFA;
+     
+}
+.boton-expandir {
+    cursor: pointer;
+}
+
+.card img {
+    width: 100%;
+    height: 50%;
+    margin-bottom: 10px;
+}
+
+.texto-expandible {
+    height: 0;
+    overflow: hidden;
+    transition: height 0.3s ease; /* Esto añadirá una animación a la expansión */
+}
+
+
 
 
 /*responsive*/
