--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 /*styles*/
 
 .topnav a:hover {
@@ -237,28 +238,26 @@ h2 {
 
 .plataformas-container{
     display: block;
-    height: 500px;
+    height: 300px;
     width: 100%;
     background-color: white;
     align-items: center;
     text-align: center;
     margin-top: 30px;
 }
-.imagen-plataformas {
+.contenedor-imagenes {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between; /* Esto añadirá espacio entre las imágenes */
+    justify-content: space-between;
 }
 .imagen-plataformas img{
-    width: 20%;
-    margin: auto;
-    display: block;
-    justify-content: center;
-    align-items: center;
     margin-top: 120px;
-
+    max-width: 400px;
+    display: inline-block;
+    width: 60%;
+    margin: auto;
 }	
 
+/* funciones */
 
 .container-funciones{
     
@@ -280,10 +279,9 @@ h2 {
     justify-content: center;
 }
 
-.card {
+.card-funciones {
    
     width: 300px;
-    
     padding: 10px;
     margin: auto;
     margin-top: 40px;
@@ -291,7 +289,7 @@ h2 {
     transition: height 0.3s ease; /* Esto añadirá una animación a la expansión */
     display: flex;
     flex-direction: column;
-    background-color: #FDFCFA;
+    background-color: white;
      
 }
 .boton-expandir {
@@ -310,8 +308,117 @@ h2 {
     transition: height 0.3s ease; /* Esto añadirá una animación a la expansión */
 }
 
+/* preguntas */
 
+.preguntas-container{
+    
+    padding: 0;
+    font-family: 'Inter', sans-serif;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #EFEFEF;
+}
 
+.slide-container{
+    max-width: 1120px;
+    width: 100%;
+    padding: 40px 0;
+  }
+  .slide-content{
+    margin: 0 40px;
+    overflow: hidden;
+    border-radius: 25px;
+  }
+  .card{
+    border-radius: 25px;
+    background-color: #FFF;
+  }
+  .image-content,
+  .card-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 14px;
+  }
+  .image-content{
+    position: relative;
+    row-gap: 5px;
+    padding: 25px 0;
+  }
+  .overlay{
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #4070F4;
+    border-radius: 25px 25px 0 25px;
+  }
+  .overlay::before,
+  .overlay::after{
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: -40px;
+    height: 40px;
+    width: 40px;
+    background-color: #4070F4;
+  }
+  .overlay::after{
+    border-radius: 0 25px 0 0;
+    background-color: #FFF;
+  }
+  .card-image{
+    position: relative;
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    background: #FFF;
+    padding: 3px;
+  }
+  .card-image .card-img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 4px solid #4070F4;
+  }
+  .name{
+    font-size: 18px;
+    font-weight: 500;
+    color: #333;
+  }
+  .description{
+    font-size: 14px;
+    color: #707070;
+    text-align: center;
+  }
+  .swiper-navBtn{
+    color: #6E93f7;
+    transition: color 0.3s ease;
+  }
+  .swiper-navBtn:hover{
+    color: #4070F4;
+  }
+  .swiper-navBtn::before,
+  .swiper-navBtn::after{
+    font-size: 35px;
+  }
+  .swiper-button-next{
+    right: 0;
+  }
+  .swiper-button-prev{
+    left: 0;
+  }
+  .swiper-pagination-bullet{
+    background-color: #6E93f7;
+    opacity: 1;
+  }
+  .swiper-pagination-bullet-active{
+    background-color: #4070F4;
+  }
 
 /*responsive*/
 @media screen and (max-width: 600px) {
@@ -332,6 +439,18 @@ h2 {
       float: none;
       display: block;
       text-align: left;
+    }
+    .card-funciones {
+        width: 90%;
+        height: 300px;
+        
+    }
+    .card-funciones img {
+        width: 240px;
+        height: 120px;
+        margin-bottom: 10px;
+        margin:auto;
+
     }
   }
 @media screen and (max-width: 600px) {
@@ -362,6 +481,12 @@ h2 {
     .imagen-plataformas{
         flex-direction: column;
     }
+    .slide-content{
+        margin: 0 10px;
+      }
+      .swiper-navBtn{
+        display: none;
+      }
 
 }
 @media screen and (max-width: 600px) {
@@ -392,7 +517,15 @@ h2 {
         
     }
     .container-about{
-        height: 920px;
+        height: 830px;
     }
+    .container-funciones{
+        height: 1300px;
+    }
+    .plataformas-container{
+        height: 200px;
+    }
+
+    
 
 }
