--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -425,20 +425,20 @@ h2 {
 }
 .form-group input[type="text"],
 .form-group input[type="email"] {
-    width: 160%; /* Ajusta esto según sea necesario, pero ten en cuenta que ya está al 100% */
+    width: 100%; /* Ajusta esto según sea necesario, pero ten en cuenta que ya está al 100% */
 
 }
 
 .form-group textarea {
     resize: vertical; 
-    width: 200%;
+    width: 140%;
 }
 .container-contacto img {
     width: 45%;
     height: 80%;
     display: flex;
     margin-top: 5%;
-    margin-left: 10%;
+    margin-left: 1%;
     margin-right: 7%;
 }
 .text-contacto{
@@ -617,10 +617,8 @@ footer {
         margin-top: 50px; /* Ajusta este valor según tus necesidades */
     }
     .servicios-logo{
-        width: 60px; /* Ajusta este valor según tus necesidades */
-        display: block;
-        margin-left: 15px;
-        align-items: center;
+       
+        visibility: hidden;
     }
     .servicios-imagen{
         width: 50%;
@@ -629,13 +627,11 @@ footer {
     .container-about{
         height: 830px;
     }
-    .container-funciones{
-        height: 1300px;
-    }
     .plataformas-container{
         height: 200px;
     }
     .container-funciones{
-        height: 1300px;
+        height: 1400px;
     }
+    
 }
